hopefully fixing deploy

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -3,3 +3,6 @@ title: "Hello DS World!"
 ---
 
 This page is built from **Quarto**. Edit this `.qmd`, commit, and an Action will render & publish your site.
+
+
+Huh.
